[package]
name = "marx_js_data"
version = "0.1.0"
authors = ["Keith Raymond <raymondke99@gmail.com>"]
autobins = false

[dependencies]
lambda_runtime = "0.2.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
simple-error = "0.2.1"
rusoto_core = "0.35"
rusoto_dynamodb = "0.35"
openssl = { version = "0.10", features = ["vendored"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"